- localedrake
  o install proper qtX package for gcin

Version 11.20 - 20 August 2008

- diskdrake
  o fix sizing partitions bar (#24410)
  o increase default width of buttons so that they fit in expert mode
- drakauth:
  o handle pam_tcb instead of (deprecated) pam_unix (#42471)

Version 11.16 - 19 August 2008

- share new advanced icon with standalone tools

Version 11.14 - 19 August 2008

- authentication: enable network-auth meta-service if auth is not local

Version 11.13 - 18 August 2008

- do_pkgs: do not reload urpmi media at every check for package availability
- finish-install: set locale at first step when language is selected
  in gfxmenu (#42299)
- move hardware packages detection code from installer to drakxtools
- add helpers to remove unused localization and hardware packages
  (remove-unselected-locales, remove-unused-hardware-packages)

Version 11.10.2 - 18 August 2008

- really fix another focus bug (#42750)

Version 11.10.1 - 18 August 2008

- fix another focus bug (#42750)

Version 11.10 - 14 August 2008

- diskdrake:
  o refreshed GUI
- localedrake:
  o default to UTF-8 for chinese simplified (#42137)

Version 11.6 - 8 August 2008

- add product type to URL when fetching mirror list
- enable to share code between draksnapshot, mdkonline & net_applet

Version 11.5 - 6 August 2008

- fix more strange focus bugs

Version 11.4 - 5 August 2008

- fix strange focus bugs

Version 11.3 - 4 August 2008

- drakedm:
  o adapt to dm.d files being moved to /usr/share (#41879)
  o do not try to configure an undefined dm

Version 10.47 - 10 July 2008

- fix reading and setting kdmrc (by resolving alternative in chroot)

Version 10.46 - 10 July 2008

- authentication:
  o add back fix to force the password to be utf8 (#23273)
  o fix reading md5/shadow options in /etc/pam.d/system-auth
- finish-install: log in syslog

Version 10.45 - 09 July 2008

- update autologin file path for kdm4
- default to KDE4 (instead of KDE) if kdm config exists when reading