@@ -2,6 +2,9 @@
   box in english lang (#41103)
 - do not set $HOME while installing packages (#18088)
 - install proper qtX package for gcin
+- partitionning step
+  o ensure we initialize only once but at least one, thus fixing crash
+    when embedded or in installer (#43011)
 
 Version 11.20 - 20 August 2008
 
