@@ -1,3 +1,6 @@
+- diskdrake
+  o ensure we initialize only once but at least one, thus fixing crash
+    when embedded or in installer (#43011)
 - localedrake
   o install proper qtX package for gcin
 
